[project]
authors = [{name = "hrbn", email = "277654+hrbn@users.noreply.github.com"}]
dependencies = []
description = "Predictive model for British Airways bookings"
name = "british-airways-bookings"
requires-python = "< 3.11"
version = "0.1.0"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<3"
numpy = ">=2.1.0,<3"
plotly = ">=5.24.0,<6"
scikit-learn = ">=1.5.1,<2"
imbalanced-learn = ">=0.12.3,<0.13"
ipython = ">=8.27.0,<9"
skrub = ">=0.3.0,<0.4"
notebook = ">=7.2.2,<8"
ipywidgets = ">=8.1.5,<9"
python = "<3.11"